--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -25,7 +25,6 @@ h1, h2, h3 { text-align: center; margin-bottom: 4rem; }
   line-height: 6.5rem;
   color: #222;
 }
-.navbar-link.active { color: #33C3F0; }
 
 a {
   color: #00008b; }
@@ -58,7 +57,7 @@ tr > td > a {
   width: 100%;
   height: 38px;
   padding: 0 30px;
-  color: #FFF;
+  color: #222;
   background-color: #fdfd96;
   text-align: center;
   font-size: 11px;
