--- a/templates/list.html
+++ b/templates/list.html
@@ -25,7 +25,7 @@
 		  <td>
 		    <a href="{{ url_for('book', id=book.id) }}">
 		    	<i class='fa-solid fa-book'></i>
-		    	{{ book.title }} {% if not series %}({{ book.series.name }} #{{ book.series_index }}){% endif %} by {{ book.author.name }}
+		    	{{ book.title }} {% if not series and book.series.name != '<None>' %}({{ book.series.name }} #{{ book.series_index }}){% endif %} by {{ book.author.name }}
 		  	</a>
 		  </td>
 		  <td>
