--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}{% block title %}👋 Welcome {{ current_user.name }}! 🥳{% endblock %} {% block content %}
 <h3>Recently Added</h3>
-<table class="u-full-width">
+<table class="u-full-width list">
   <thead>
     <tr>
       <th>Title</th>
@@ -17,7 +17,7 @@
 		  	</a>
       </td>
       <td>
-      	{% for tag in book.tags %}
+      	{% for tag in book.tags|sort(attribute='name') %}
 		  	<a href="{{ url_for('tag', id=tag.id) }}">
 		  		<i class="fa-solid fa-tag"></i>
 		  		{{ tag.name }}
