--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %} {% block title %}{% if astp %}{{ astp.name }}{% else %}{{ title }}{% endif %}{% if count %} ({{ count }}){% endif %}{% endblock %} {% block content %}
 {% if current_user.id == 1 %}{% if author or series or tag or publisher %}
 <div style="margin-bottom: 4rem; text-align: center;">
+	{% if title == 'Books' %}
+	<a href="{{ url_for('add_book') }}" class="button">
+		<i class="fa-solid fa-plus"></i>
+	</a>
+	{% endif %}
 	<a href="{% if author %}{{ url_for('update_author', id=astp.id) }}{% elif series %}{{ url_for('update_series', id=astp.id) }}{% elif tag %}{{ url_for('update_tag', id=astp.id) }}{% elif publisher %}{{ url_for('update_publisher', id=astp.id) }}{% endif %}" class="button">
 		<i class="fa-solid fa-pencil"></i>
 	</a>
