--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,30 +2,6 @@ body { background-color: #fffdd0;}
 .header { margin: 2% 0; }
 h1, h2, h3 { text-align: center; margin-bottom: 4rem; }
 
-.navbar {
-	display: block;
-  width: 100%;
-  height: 6.5rem;
-  background: #fdfd96;
-  z-index: 99;
-  border: 1px solid;
-  border-radius: 4px;
-  margin-bottom: 4rem;
-  padding-left: 2rem;
-}
-.navbar-list { list-style: none; margin-bottom: 0; }
-.navbar-item { position: relative; float: left; margin-bottom: 0; }
-.navbar-link {
-  text-transform: uppercase;
-  font-size: 11px;
-  font-weight: 600;
-  letter-spacing: .2rem;
-  margin-right: 29px;
-  text-decoration: none;
-  line-height: 6.5rem;
-  color: #222;
-}
-
 a {
   color: #00008b; }
 a:hover {
@@ -33,26 +9,30 @@ a:hover {
   
 .content { clear: both; }
 
-img { border-radius: 4px; }
+img { border-radius: 10px; }
 
-table {
+tr:first-child, tr:not(:last-child) { border-bottom: 1px solid #222; }
+th, td {
 	background-color: #fdfd96;
-	border: 1px solid #222; }
-th, td { border-color: #222; padding: 12px 15px; }
-th:first-child,
-td:first-child {
-  padding-left: 1rem; }
-th:last-child,
-td:last-child {
-  padding-right: 1rem; }
-tr > th { text-align: center; text-transform: uppercase;}
-tr > td > a {
+  border-bottom: none;
+	padding: 12px 15px; }
+th:first-child, td:first-child { padding-left: 1rem; }
+th:last-child, td:last-child { padding-right: 1rem; }
+th:first-of-type { border-top-left-radius: 10px; }
+th:last-of-type { border-top-right-radius: 10px; }
+tr:last-of-type td:first-of-type { border-bottom-left-radius: 10px; }
+tr:last-of-type td:last-of-type { border-bottom-right-radius: 10px; }
+
+th {
+	border-top: none;
+	text-align: center;
+	text-transform: uppercase; }
+td a {
   font-weight: 600;
   text-decoration: none; }
-.users tr > td { text-align: center; }
-.list td:last-child {
-  text-align: right; }
-  
+.users tr td { text-align: center; }
+.list td:last-child { text-align: right; }
+
 .alert {
   width: 100%;
   height: 38px;
@@ -67,8 +47,7 @@ tr > td > a {
   white-space: nowrap;
   border-radius: 4px;
   border: 1px solid;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 i { padding: 2px; }
 .button i { font-size: 1.25em; }
@@ -83,7 +62,6 @@ input[type="button"] {
   color: #222;
   background-color: #fdfd96;
   border-color: #222;}
-  
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -96,3 +74,24 @@ select {
   background-color: #fdfd96;
   border-color: #222; }
 
+.navbar, .btn-group { margin: 0 auto; text-align: center; }
+.btn-group {
+	position: fixed;
+	left: 50%;
+	bottom: 0;
+	transform: translate(-50%, -50%); }
+.navbar .button, .btn-group .button {
+	padding: 0 15px;
+	float: left;
+  border-radius: 0; }
+.navbar .button:not(:last-child), .btn-group .button:not(:last-child) { border-right: none; }
+.navbar .button:first-child, .btn-group .button:first-child {
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px; }
+.navbar .button:last-child, .btn-group .button:last-child {
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px; }
+.navbar:after, .btn-group:after {
+  content: "";
+  clear: both;
+  display: table; }
