--- a/templates/book.html
+++ b/templates/book.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block title %}<em>{{ book.title }}</em> by {{ book.author.name }}{% endblock %} {% block content %}
 {% if current_user.id == 1 %}
-<div style="margin-bottom: 4rem; text-align: center;">
+<div role="group" class="btn-group">
 	<a href="{{ url_for('update_book', id=book.id) }}" class="button">
 		<i class="fa-solid fa-pencil"></i>
 	</a>
