--- a/templates/astp.html
+++ b/templates/astp.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %}{{ title }} ({{ count }}){% endblock %} {% block content %}
 {% if current_user.id == 1 %}
 <div role="group" class="btn-group">
-	<a href="{% if author %}{{ url_for('add_author') }}{% elif series %}{{ url_for('add_series') }}{% elif tag %}{{ url_for('add_tag') }}{% elif publisher %}{{ url_for('add_publisher') }}{% endif %}" class="button">
+	<a href="{% if title == 'Authors' %}{{ url_for('add_author') }}{% elif title == 'Series' %}{{ url_for('add_series') }}{% elif title == 'Tags' %}{{ url_for('add_tag') }}{% else %}{{ url_for('add_publisher') }}{% endif %}" class="button">
 		<i class="fa-solid fa-plus"></i>
 	</a>
 </div>
@@ -15,12 +15,19 @@
 				</tr>
 			</thead>
 		  <tbody>
+		  	<tr>
+		  		<td>
+		  			<i class='fa-solid fa-circle-info'></i>
+		  			Book counts may be wrong depending on your access level.
+	  			</td>
+		  	</tr>
 		    {% for i in astp.items %}
 		    <tr>
 		      <td>
 		        <a href="{% if title == 'Authors' %}{{ url_for('author', id=i.id) }}{% elif title == 'Series' %}{{ url_for('serie', id=i.id) }}{% elif title == 'Tags' %}{{ url_for('tag', id=i.id) }}{% else %}{{ url_for('publisher', id=i.id) }}{% endif %}">
 		        	<i class='fa-solid fa-user'></i>
-		        	{{ i.name }}
+		        	{{ i.name }} ({{ i.books|count }} book{% if i.books|count != 1 %}s{% endif %})
+		        	{% if book in i.books <= current_user.level %}yes{% endif %}
 		      	</a>
 		      </td>
 		    </tr>
@@ -28,32 +35,22 @@
 		  </tbody>
 		</table>
 		<!-- Pagination Links-->
-		<table class="u-full-width list">
-			<thead>
-				<tr>
-					<th></th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>
-						Page {{ astp.page }} of {{ astp.pages }}
-					</td>
-					<td>
-						{% if astp.has_prev %}
-					  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.prev_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.prev_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.prev_num) }}{% else %}{{ url_for('publishers', page=astp.prev_num) }}{% endif %}" class="button">
-							<i class="fa-solid fa-angles-left"></i>
-					  </a>
-					  {% endif %}{% if astp.has_next %}
-					  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.next_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.next_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.next_num) }}{% else %}{{ url_for('publishers', page=astp.next_num) }}{% endif %}" class="button">
-					  	<i class="fa-solid fa-angles-right"></i>
-					  </a>
-					  {% endif %}
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="row">
+			<div class="six columns">
+				<strong>Page {{ astp.page }} of {{ astp.pages }}</strong>
+			</div>
+			<div class="six columns" style="text-align:right;">
+				{% if astp.has_prev %}
+			  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.prev_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.prev_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.prev_num) }}{% else %}{{ url_for('publishers', page=astp.prev_num) }}{% endif %}" class="button">
+					<i class="fa-solid fa-angles-left"></i>
+			  </a>
+			  {% endif %}{% if astp.has_next %}
+			  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.next_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.next_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.next_num) }}{% else %}{{ url_for('publishers', page=astp.next_num) }}{% endif %}" class="button">
+			  	<i class="fa-solid fa-angles-right"></i>
+			  </a>
+			  {% endif %}
+			</div>
+		</div>
 	</div>
 </div>
 {% endblock %}
