--- a/templates/book.html
+++ b/templates/book.html
@@ -15,73 +15,69 @@
 <div class="row">
 	<div class="one-third column">
 		<img src="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}" alt="cover img" class="u-max-full-width" />
-		<table class="u-full-width">
-			<thead>
-				<tr>
-					<th></th>
-				</tr>
-			</thead>
-      <tbody>
-      	<tr>
-      		<td>
-      			<a href="{{ url_for('author', id=book.author.id) }}">
-      				<i class="fa-solid fa-user"></i>
-      				View more by {{ book.author.name }}
-      			</a>
-      		</td>
-      	</tr>
-        <tr>
-          <td>
-          	<a href="{{ url_for('serie', id=book.series.id) }}">
-          		<i class="fa-solid fa-list-ol"></i>
-          		{{ book.series.name }}{% if book.series.name != '<None>' %} #{{ book.series_index }}{% endif %}
-            </a>
-          </td>
-        </tr>
-        <tr>
-          <td>
-          	{% for tag in book.tags|sort(attribute='name') %}
-          	<a href="{{ url_for('tag', id=tag.id) }}">
-          		<i class="fa-solid fa-tag"></i>
-              {{ tag.name }}
-            </a>
-            {% endfor %}
-          </td>
-        </tr>
-        <tr>
-          <td>
-          	<a href="{{ url_for('levels') }}{{ book.level }}">
-            	<i class="fa-solid fa-star"></i>
-            	{{ book.level }}
-          	</a>
-          </td>
-        </tr>
-        <tr>
-          <td>
-          	<i class="fa-solid fa-arrow-down-1-9"></i>
-          	{% if book.wordcount <= 3500 %}<a href="{{ url_for('flash_fiction') }}">{{ book.wordcount }} (flash fiction)</a>
-          	{% elif book.wordcount <= 7500  %}<a href="{{ url_for('short_stories') }}">{{ book.wordcount }} (short story)</a>
-          	{% elif book.wordcount <= 17000 %}<a href="{{ url_for('novellettes') }}">{{ book.wordcount }} (novellette)</a>
-          	{% elif book.wordcount <= 40000 %}<a href="{{ url_for('novellas') }}">{{ book.wordcount }} (novella)</a>
-          	{% else %}<a href="{{ url_for('novels') }}">{{ book.wordcount }} (novel)</a>{% endif %}
-          </td>
-        </tr>
-        <tr>
-          <td>
-          	<i class="fa-solid fa-fingerprint"></i>
-          	<strong>{{ book.isbn }}</strong>
-          </td>
-        </tr>
-        <tr>
-          <td>
-          	<a href="{{ url_for('publisher', id=book.publisher.id) }}">
-          		<i class="fa-solid fa-building"></i>
-				      {{ book.publisher.name }}
-				    </a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+		<div class="meta">
+			<ul>
+				<li>
+					<a href="{{ url_for('author', id=book.author.id) }}">
+						<i class="fa-solid fa-user"></i>
+						View more by {{ book.author.name }}
+					</a>
+				</li>
+				<li>
+					<a href="{{ url_for('serie', id=book.series.id) }}">
+		    		<i class="fa-solid fa-list-ol"></i>
+		    		{{ book.series.name }}{% if book.series.name != '<None>' %} #{{ book.series_index }}{% endif %}
+		      </a>
+				</li>
+				<li>
+					Tags:
+					<ul>
+						{% for tag in book.tags|sort(attribute='name') %}
+						<li>
+							<a href="{{ url_for('tag', id=tag.id) }}">
+				    		<i class="fa-solid fa-tag"></i>
+				        {{ tag.name }}
+				      </a>
+						</li>
+						{% endfor %}
+					</ul>
+				</li>
+				<li>
+					<a href="{{ url_for('levels') }}{{ book.level }}">
+		      	<i class="fa-solid fa-star"></i>
+		      	{{ book.level }}
+		    	</a>
+				</li>
+				<li>
+					{% if book.wordcount <= 3500 %}<a href="{{ url_for('flash_fiction') }}">
+		    		<i class="fa-solid fa-arrow-down-1-9"></i>
+		    		{{ book.wordcount }} (flash fiction)
+		    	</a>{% elif book.wordcount <= 7500  %}<a href="{{ url_for('short_stories') }}">
+		    		<i class="fa-solid fa-arrow-down-1-9"></i>
+		    		{{ book.wordcount }} (short story)
+		    	</a>{% elif book.wordcount <= 17000 %}<a href="{{ url_for('novellettes') }}">
+		    		<i class="fa-solid fa-arrow-down-1-9"></i>
+		    		{{ book.wordcount }} (novellette)
+		    	</a>{% elif book.wordcount <= 40000 %}<a href="{{ url_for('novellas') }}">
+		    		<i class="fa-solid fa-arrow-down-1-9"></i>
+		    		{{ book.wordcount }} (novella)
+		  		</a>{% else %}<a href="{{ url_for('novels') }}">
+		  			<i class="fa-solid fa-arrow-down-1-9"></i>
+		  			{{ book.wordcount }} (novel)
+					</a>{% endif %}
+				</li>
+				<li>
+					<i class="fa-solid fa-fingerprint"></i>
+		    	<strong>{{ book.isbn }}</strong>
+				</li>
+				<li>
+					<a href="{{ url_for('publisher', id=book.publisher.id) }}">
+		    		<i class="fa-solid fa-building"></i>
+			      {{ book.publisher.name }}
+			    </a>
+				</li>
+			</ul>
+		</div>
 	</div>
 	<div class="two-thirds column">
 		{% markdown %}{{ book.description }}{% endmarkdown %}
@@ -99,7 +95,7 @@
 		  			Info
 		  		</td>
 		  		<td>
-		  			To read this book, you will need an e-book reading app for your device. Popular ones include FBReader, Moon+ Reader, and iBooks.
+		  			To read <em>{{ book.title }}</em> by {{ book.author.name }}, you will need an e-book reading app for your device. Popular ones include FBReader, Moon+ Reader, and iBooks.
 	  			</td>
 		  	</tr>
 		  	<!--<tr>
