--- a/templates/admin.html
+++ b/templates/admin.html
@@ -43,7 +43,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for user in users %}
+    {% for user in users | sort(attribute='id') %}
     <tr>
       <td>
         {{ user.id }}
