--- a/templates/list.html
+++ b/templates/list.html
@@ -17,7 +17,7 @@
 <table class="u-full-width list">
 	<thead>
 		<tr>
-			{% if series %}<th>#</th>{% endif %}
+			{% if series and astp.name != '<None>' %}<th>#</th>{% endif %}
 			<th>Title</th>
 			<th>Tags</th>
 			{% if min or max %}<th>Words</th>{% endif %}
@@ -26,7 +26,7 @@
   <tbody>
   	{% for book in books.items %}
 		<tr>
-			{% if series %}<td style='text-align: center;'>{{ book.series_index }}</td>{% endif %}
+			{% if series and astp.name != '<None>' %}<td style='text-align: center;'>{{ book.series_index }}</td>{% endif %}
 		  <td>
 		    <a href="{{ url_for('book', id=book.id) }}">
 		    	<i class='fa-solid fa-book'></i>
