--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
   <!-- HTML Meta Tags -->
-  <meta property="og:url" content="{{ page.url }}">
-  <meta property="og:title" content="{{ book.title or title }}">
-  <meta property="og:description" content="{{ book.description | limit(160) }}">
-  <meta property="og:image" content="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}">
+  <meta property="og:url" content="https://readerporium.herokuapp.com{%if book %}/books/{{ book.id }}/{% endif %}">
+  <meta property="og:title" content="{% if book %}{{ book.title | safe }} by {{ book.author.name }}{% else %}{{ title }}{% endif %}">
+  <meta property="og:description" content="{% if book %}{{ book.description | truncate(160) | safe }}{% endif %}">
+  <meta property="og:image" content="{% if book %}{{ book.cover }}{% else %}/static/favicon.ico'{% endif %}">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
